# youtube_short_creator

./: .gitignore  Makefile  README.md  env.example  pyproject.toml  simple_test.py  test_setup.py
app/: agent.py
app/agents/: __init__.py  image_generator.py  prompt_generator.py  researcher.py  script_writer.py  theme_definer.py  user_feedback.py
app/callbacks/: callbacks.py
app/utils/: __init__.py  genai_utils.py  image_utils.py
frontend/: app.py
